[tool.poetry]
name = "project-portfolio"
version = "0.1.0"
description = ""
authors = ["Le Nhat Dinh <lenhatdinh97@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
